# pandora-psf

./: .gitignore  404.html  CHANGELOG  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy-mkdocs.yml  flake8.yml  prf_fitting.yml  tests.yml
PRF/: index.html
PSF/: index.html
Scene/: index.html
calibration/: index.html
calibration/building-new-data-driven-prf-models/: index.html
docs/: PRF.md  PSF.md  README.md  Scene.md  example-psf.ipynb  example-roiscene.ipynb  example-scene.ipynb  example-tracescene.ipynb  uploading-new-files.ipynb
docs/calibration/: README.md  Untitled.ipynb  apertures.ipynb  building-initial-spectrum-normalization.ipynb  building-new-data-driven-prf-models.ipynb  building-new-data-driven-prf-nir.ipynb  building-new-data-driven-wavelength-solution.ipynb  regionpicker.py
example-psf/: index.html
example-roiscene/: index.html
example-scene/: index.html
example-tracescene/: index.html
javascripts/: mathjax.js
search/: search_index.json
snippets/: example-fits-file-packaging.ipynb  example-sim.ipynb  test.fits
src/pandorapsf/: __init__.py  docstrings.py  fit_prf.py  plotting.py  prf.py  psf.py  scene.py  sparsewarp.py  utils.py
src/pandorapsf/data/: dichroic-transmission.csv  nirda-wav-solution.fits  pandora_nir_psf_lowres.fits  pandora_vis_psf_lowres.fits  prf_gauss_params.csv  visda-wav-solution.fits
tests/: test_psf.py  test_scene.py  test_sparse.py  test_sparsewarp.py  test_spectra.py
uploading-new-files/: index.html
