[tool.poetry]
name = "pandorapsf"
version = "0.2.4"
description = ""
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]
readme = "README.md"
packages = [{include = "pandorapsf", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandorasat = ">=0.5.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
