[tool.poetry]
name = "pandorapsf"
version = "0.2.7"
description = ""
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]
readme = "README.md"
packages = [{include = "pandorapsf", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandorasat = ">=0.5.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
